discussion/kv_engine/186542/186542_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move folly io callbacks elsewhere

To allow for easier unit test

Change-Id: I7ed3de87eac97b5b2830ca399b9e50c3257f9c0d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-02-10 12:17:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-10 12:55:06.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22609/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31: error: expected parameter declarator [clang-diagnostic-error]
                              gsl::span<std::string_view> data) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:59: error: expected ")" [clang-diagnostic-error]
                              gsl::span<std::string_view> data) {
                                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:36:30: note: to match this "("
void AsyncWriteCallback::send(folly::AsyncSocket& sock,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:40:24: error: invalid range expression of type "double (double) noexcept"; no viable "begin" function available [clang-diagnostic-error]
    for (const auto& d : data) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:40:26: error: use of undeclared identifier "data"; did you mean "atan"? [clang-diagnostic-error]
    for (const auto& d : data) {
                         ^~~~
                         atan
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:57:13: note: "atan" declared here
__MATHCALL (atan,, (_Mdouble_ __x));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:49:24: error: invalid range expression of type "double (double) noexcept"; no viable "begin" function available [clang-diagnostic-error]
    for (const auto& d : data) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:49:26: error: use of undeclared identifier "data"; did you mean "atan"? [clang-diagnostic-error]
    for (const auto& d : data) {
                         ^~~~
                         atan
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:57:13: note: "atan" declared here
__MATHCALL (atan,, (_Mdouble_ __x));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:52:41: error: expected parameter declarator [clang-diagnostic-error]
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:52:41: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:52:69: error: expected ")" [clang-diagnostic-error]
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:52:14: note: to match this "("
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22609/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31:
error: expected parameter declarator [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22609/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52008/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52008/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43645/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/io/folly/write_callback.h:52:41:
error: use of undeclared identifier "gsl"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43645/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24210/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24210/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1383/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1383/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12334/ : FAILURE

Compile error at [2023-02-10T12:24:38.390Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/io/folly/write_callback.h:52:41:
error: use of undeclared identifier "gsl"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12334/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12418/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12418/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24662/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24662/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25087/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
[2023-02-10T12:29:54.440Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:134: Failure
[2023-02-10T12:29:54.440Z] Expected: (0) != (cb::ArenaMalloc::getPreciseAllocated(engine->getArenaMallocClient(), cb::MemoryDomain::Primary)), actual: 0 vs 0
[2023-02-10T12:29:54.440Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=full_eviction" (82 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25087/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25970/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25970/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33082/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33082/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22607/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
